--- a/package.json
+++ b/package.json
@@ -8,33 +8,36 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git@github.com:shapeshifta78/pgallery.git"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/shapeshifta78/pgallery/issues"
   },
   "author": {
     "name": "Thomas Horster",
     "email": "thomas.horster@kulturlounge.de",
-    "url": "https://github.com/shapeshifta"
+    "url": "https://github.com/shapeshifta78"
   },
   "license": "MIT",
-  "dependencies": {
-    "jquery": ">= 1.5.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-bump": "^0.7.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.12.0",
+    "grunt-sass": "^1.1.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-qunit": "^0.1.5",
+    "load-grunt-config": "^0.19.1",
+    "load-grunt-tasks": "^3.4.0",
     "phantomjs": "^1.9.18",
-    "qunitjs": "^1.19.0"
+    "qunitjs": "^1.19.0",
+    "request": "^2.69.0"
   },
   "scripts": {
     "test": "grunt travis --verbose"
